# ExactSimplex

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md
include/: Simplex.h
mainFolder/: solvePL.cpp  test_fromFile.cpp  test_pSimplex.cpp  testrational.cpp
src/: Simplex.cpp
testcases/: bland_trick.py  input.txt  klee_minty.py  random_feasible.py  small2D_poly.py  test1.txt  test10_bland_trick_10.txt  test11_bland_trick_20.txt  test12.txt  test2_20240626.txt  test3_20240124.txt  test4_20230628 copy.txt  test4_20230628.txt  test5_klee_minty6.txt  test6.txt  test6_klee_minty27.txt  test7_random_5x10.txt  test8.txt  test8_random_30x80.txt  test9_random_60x180.txt
